--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/38c07037bc.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Honda New Wave 110 S 2022 0KM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
